@@ -1,6 +1,6 @@
 
                      Tiny Applications Collection
-                     $Date: 2005/11/20 20:25:23 $
+                     $Date: 2005/11/27 16:57:38 $
 
 Tiny Applications Collection is a set of small programs, shell scripts
 and other  things which  may be usefull  in everyday life.   There are
@@ -42,6 +42,10 @@ At the moment the collection includes:
 
  * cutcom - removes C++ comments  from stdin and outputs the result to
    stdout;
+
+ * drun - it's really 'null' with aditional ability to daemonize
+   (hence the name).  Helpful when running X applications from a
+   terminal.
 
  * extractlinks.pl  - extracts links  from a  HTML page.   Useful, for
    example, when downloading an Internet gallery;
